--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pydeps-size"
 version = "0.1.0"
-description = "Add your description here"
+description = "A package that tells you the size of your dependencies in Megabytes!"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
