--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,13 @@ dev = [
     "ipykernel>=6.29.5",
     "ruff>=0.11.12",
 ]
+
+[project.scripts]
+pydeps = "pydeps_size.pydeps:main"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
