--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "depsize"
-version = "0.1.1"
+version = "0.1.2"
 description = "A package that tells you the size of your dependencies in Megabytes!"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = []
+keywords = ["dependencies", "python"]
 license = {file = "LICENSE"}
 
 [dependency-groups]
@@ -12,6 +13,9 @@ dev = [
     "ipykernel>=6.29.5",
     "ruff>=0.11.12",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/tobiasmcvey/depsize"
 
 [project.scripts]
 depsize = "depsize.depsize:main"
