--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = {file = "LICENSE"}
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
+    "pytest>=8.3.5",
     "ruff>=0.11.12",
 ]
 
